--- a/app/css/sass/ui-controls/_dialogue.scss
+++ b/app/css/sass/ui-controls/_dialogue.scss
@@ -27,6 +27,7 @@
         span.fa {
           font-size: $font-size * 2;
           vertical-align: middle;
+          margin-right: $padding * 3;
         }
       }
       > div.buttons {
